src/objects/ANG_Risk_Event_Configuration__c.object
<CustomObject>
    <description>Object used to store information on WHEN to generate the risk event</description>
    <fields>
        <fullName>ANG_Field01_Conditions__c</fullName>
        <globalPicklist>ANG_Risk_Event_Conditions</globalPicklist>
        <label>Field01 Conditions</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ANG_Field01_Values__c</fullName>
        <inlineHelpText>For lists of values, separate them with semi-colons ( ; )</inlineHelpText>
        <label>Field01 Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Field01__c</fullName>
        <label>Field01</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Field02_Conditions__c</fullName>
        <globalPicklist>ANG_Risk_Event_Conditions</globalPicklist>
        <label>Field02 Conditions</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ANG_Field02_Values__c</fullName>
        <inlineHelpText>For lists of values, separate them with semi-colons ( ; )</inlineHelpText>
        <label>Field02 Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Field02__c</fullName>
        <label>Field02</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Field03_Conditions__c</fullName>
        <globalPicklist>ANG_Risk_Event_Conditions</globalPicklist>
        <label>Field03 Conditions</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ANG_Field03_Values__c</fullName>
        <inlineHelpText>For lists of values, separate them with semi-colons ( ; )</inlineHelpText>
        <label>Field03 Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Field03__c</fullName>
        <label>Field03</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Object_Record_Type__c</fullName>
        <description>Define the record type of the object that the risck event is created from (see Object Type)</description>
        <inlineHelpText>Must be the Developer Name (e.g.: SIDRA_Lite)</inlineHelpText>
        <label>Object Record Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Object_Type__c</fullName>
        <description>Use the API name of the object that will generate the change code. (i.e: AMS_OSCAR__c) This information will be stored on the Created From field on the Risk Event</description>
        <label>Object Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Risk_Event_Status__c</fullName>
        <globalPicklist>ANG_Event_Status</globalPicklist>
        <label>Risk Event Status</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ANG_Risk_Event_Type__c</fullName>
        <label>Risk Event Type</label>
        <referenceTo>ANG_Risk_Event_Type__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Risk_Event_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ANG_isUpdateOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Risk Event Trigger Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ANG_Risk_Event_Type__c</columns>
        <columns>ANG_isUpdateOnly__c</columns>
        <columns>ANG_Risk_Event_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REC-{00000000}</displayFormat>
        <label>Risk Event Trigger Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Event Trigger Configurations</pluralLabel>
    <recordTypes>
        <fullName>RISK_EVENT_CONFIG</fullName>
        <active>true</active>
        <label>Risk Event Configuration</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>